# syslogger

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  rebar.config
c_src/: Makefile.am  configure.ac  syslogger.c
src/: syslogger.app.src  syslogger.erl  syslogger_app.erl  syslogger_sup.erl
test/: syslogger_SUITE.erl
